Failed attempt to fix existing image workflow